[package]
name = "adventofcode-2015"
version = "0.1.0"
authors = ["Jed Davis <jld@panix.com>"]
exclude = ["input/*"]
[dependencies]
md5 = "0.1.1"
[[bin]]
name = "day1"
path = "src/day1.rs"
[[bin]]
name = "day2"
path = "src/day2.rs"
[[bin]]
name = "day3"
path = "src/day3.rs"
[[bin]]
name = "day4"
path = "src/day4.rs"
[[bin]]
name = "day5"
path = "src/day5.rs"
[[bin]]
name = "day5b"
path = "src/day5b.rs"
